--- a/ga_flattener_colon.yaml
+++ b/ga_flattener_colon.yaml
@@ -52,7 +52,7 @@ resources:
   type: dmt_cloud_function.py
   properties:
     # All the files that start with this prefix will be packed in the Cloud Function (HTTP)
-    codeLocation: cfconfigbuilder/
+    codeLocation: cfconfigbuilderps/
     codeBucket: 843904533364-function-code-staging
     triggerType: pubsub
     location: us-east1
