--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,7 @@ env:
 
 on:
   push:
-    branches: [ development-ci-cd-workflow, master ]
+    branches: [ development-ci-cd-workflow, master, development ]
   pull_request:
     branches: [ master ]
 
