--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,7 @@ env:
 
 on:
   push:
-    branches: [ master, development-ga4 ]
+    branches: [ master, development-ga4 , development-ga4-task-updates-after-code-review]
   pull_request:
     branches: [ master ]
 
