docs: config_datasets_sample.json - intraday iteration 3 - renamed keys
"daily" key is not just for daily flattening. These tables will also be flattened during intraday flattening. This key should be called "tables_to_flatten"

--- a/sample_config/config_datasets_sample.json
+++ b/sample_config/config_datasets_sample.json
@@ -1,20 +1,20 @@
 {
   "analytics_222460912": {
-    "daily": [
+    "tables_to_flatten": [
       "events",
       "event_params",
       "user_properties",
       "items"
     ],
-    "intraday": 2
+    "intraday_schedule": 2
   },
   "analytics_251817041": {
-    "daily": [
+    "tables_to_flatten": [
       "events",
       "event_params",
       "user_properties",
       "items"
     ],
-    "intraday": 2
+    "intraday_schedule": 2
   }
 }
