docs: config_datasets_sample.json - intraday iteration 4 - default frequency
By default, we're not doing intraday flattening

--- a/sample_config/config_datasets_sample.json
+++ b/sample_config/config_datasets_sample.json
@@ -6,7 +6,7 @@
       "user_properties",
       "items"
     ],
-    "intraday_schedule": 2
+    "intraday_schedule": null
   },
   "analytics_251817041": {
     "tables_to_flatten": [
@@ -15,6 +15,6 @@
       "user_properties",
       "items"
     ],
-    "intraday_schedule": 2
+    "intraday_schedule": null
   }
 }
