--- a/ga_flattener_colon.yaml
+++ b/ga_flattener_colon.yaml
@@ -43,7 +43,7 @@ resources:
   properties:
     # All the files that start with this prefix will be packed in the Cloud Function that flattens the data
     codeLocation: cf/
-    codeBucket: 464892960897-function-code-staging
+    codeBucket: 843904533364-function-code-staging-ga4-flattener
     triggerType: pubsub
     location: us-east1
     timeout: 60s
@@ -55,7 +55,7 @@ resources:
   properties:
     # All the files that start with this prefix will be packed in the Cloud Function that sets up the configuration
     codeLocation: cfconfigbuilderps/
-    codeBucket: 464892960897-function-code-staging
+    codeBucket: 843904533364-function-code-staging-ga4-flattener
     triggerType: pubsub
     location: us-east1
     timeout: 60s
@@ -68,7 +68,7 @@ resources:
   properties:
     # All the files that start with this prefix will be packed in the Cloud Function that builds the cfintraday schedule
     codeLocation: cfintraday/
-    codeBucket: 464892960897-function-code-staging
+    codeBucket: 843904533364-function-code-staging-ga4-flattener
     triggerType: pubsub
     location: us-east1
     timeout: 60s
