--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,7 +8,7 @@ env:
 
 on:
   push:
-    branches: [ master, feature/ga4-intraday ]
+    branches: [ master, feature/ga4-intraday-testing ]
   pull_request:
     branches: [ master ]
 
