--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,6 +1,11 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
+#TODO: just an idea: it would be cool if as part of CI/CD, before running unit tests, flattener also installed
+# uninstall first, before you install again
+# this way we can quickly detect any installation issue
+# the flow could be as follows: 1) uninstall 2) install 3) run unit tests
+
 name: Python package
 
 env:
