--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,7 +13,7 @@ env:
 
 on:
   push:
-    branches: [ master, feature/ga4-intraday-testing ]
+    branches: [ master, feature/ga4-intraday-testing, feature/installation-enhancements ]
   pull_request:
     branches: [ master ]
 
