--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,7 +2,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
 #TODO: just an idea: it would be cool if as part of CI/CD, before running unit tests, flattener also installed
-# this way we can quickly detect any installation issue
+# this way we can quickly detect any installation issues
 # uninstall first, before you install again
 # the flow could be as follows: 1) uninstall 2) install 3) run unit tests
 
