--- a/cf/requirements.txt
+++ b/cf/requirements.txt
@@ -2,3 +2,5 @@ google-api-python-client==1.12.8
 google-cloud-storage==1.35.0
 google-cloud-bigquery==2.7.0
 google-cloud-pubsub==2.2.0
+pandas==1.3.5
+pyarrow==6.0.1
