--- a/sample_config/config_datasets_sample.json
+++ b/sample_config/config_datasets_sample.json
@@ -9,6 +9,10 @@
     "intraday_schedule": {
       "frequency": null,
       "units": "hours"
+    },
+    "output": {
+      "sharded": true,
+      "partitioned": false
     }
   },
   "analytics_123456789": {
