--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,31 +42,11 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Reinstall flattener
-        run: |
-          # gcloud
-          gcloud -v
-          
-          # auth
-          echo "$GOOGLE_APPLICATION_CREDENTIALS" > "sandbox/sa.json"         
-          gcloud auth activate-service-account --key-file "sandbox/sa.json"
-          gcloud config set project "$GCP_PROJECT_ID"
-          
-          # uninstall
-          # remove GCS config file
-          # if we cannot delete, continue with the script
-          # https://stackoverflow.com/questions/22009364/is-there-a-try-catch-command-in-bash
-          gsutil rm gs://ga-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: cannot delete GCS config file"
-          
-          gcloud deployment-manager deployments list
-          gcloud deployment-manager deployments delete "$DEPLOYMENT_NAME" -q || echo "ERROR: cannot delete deployment"
-          
-          # install 
-          gcloud deployment-manager deployments create "$DEPLOYMENT_NAME" --config ga_flattener.yaml
       - name: Test with pytest
         run: |          
           # test   
-          pytest --verbose
+          pytest --verbose tests/test_input_validator.py::TestInputValidatorConfigurationError::test_input_validator_Exception tests/test_partitioning.py
+
       - name: Clean up
         run: |
           # clean up
