--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -56,17 +56,17 @@ jobs:
           # remove GCS config file
           # if we cannot delete, continue with the script
           # https://stackoverflow.com/questions/22009364/is-there-a-try-catch-command-in-bash
-          # gsutil rm gs://ga-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: cannot delete GCS config file"
+          gsutil rm gs://ga-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: cannot delete GCS config file"
           
           gcloud deployment-manager deployments list
-          # gcloud deployment-manager deployments delete "$DEPLOYMENT_NAME" -q || echo "ERROR: cannot delete deployment"
+          gcloud deployment-manager deployments delete "$DEPLOYMENT_NAME" -q || echo "ERROR: cannot delete deployment"
           
           # install 
-          # gcloud deployment-manager deployments create "$DEPLOYMENT_NAME" --config ga_flattener.yaml
+          gcloud deployment-manager deployments create "$DEPLOYMENT_NAME" --config ga_flattener.yaml
       - name: Test with pytest
         run: |          
           # test   
-          pytest --verbose tests/test_partitioning.py
+          pytest --verbose
       - name: Clean up
         run: |
           # clean up
