--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ env:
 
 on:
   push:
-    branches: [ master, feature/ga4-intraday-testing, feature/installation-enhancements ]
+    branches: [ master, staging ]
   pull_request:
     branches: [ master ]
 
