test: CI/CD change

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ env:
 
 on:
   push:
-    branches: [ master, staging, feature/logging-enhancement ]
+    branches: [ master, staging ]
   pull_request:
     branches: [ master ]
 
