--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Test with pytest
         run: |          
           # test   
-          pytest --verbose
+          pytest --verbose tests/test_flatten_ga_data.py
       - name: Clean up
         run: |
           # clean up
