feat: deployment of intraday SQL view function

--- a/ga_flattener.yaml
+++ b/ga_flattener.yaml
@@ -28,6 +28,8 @@ imports:
 - path: cfconfigbuilderps/requirements.txt
 - path: cfintraday/main.py
 - path: cfintraday/requirements.txt
+- path: cfintradaysqlview/main.py
+- path: cfintradaysqlview/requirements.txt
 
 resources:
 - name: y_resource_bucket_name
@@ -68,6 +70,19 @@ resources:
   properties:
     # All the files that start with this prefix will be packed in the Cloud Function that builds the cfintraday schedule
     codeLocation: cfintraday/
+    codeBucket: 464892960897-function-code-staging-ga4-flattener
+    triggerType: pubsub
+    location: us-east1
+    timeout: 60s
+    runtime: python37
+    availableMemoryMb: 128
+    entryPoint: manage_intraday_schedule
+
+- name: function_intraday_sql_view
+  type: dmt_cloud_function.py
+  properties:
+    # All the files that start with this prefix will be packed in the Cloud Function that builds the cfintraday schedule
+    codeLocation: cfintradaysqlview/
     codeBucket: 464892960897-function-code-staging-ga4-flattener
     triggerType: pubsub
     location: us-east1
