--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ env:
 
 on:
   push:
-    branches: [ master, staging ]
+    branches: [ master, staging , feature/intraday-sql-view]
   pull_request:
     branches: [ master ]
 
