--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -64,6 +64,10 @@ jobs:
 
           # install
           gcloud deployment-manager deployments create "$DEPLOYMENT_NAME" --config ga_flattener.yaml
+          
+          # check for the config file
+          gsutil stat gs://ga-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: GCS config file not found"
+
       - name: Test with pytest
         run: |          
           # test   
