--- a/sample_config/config_with_everything_enabled.json
+++ b/sample_config/config_with_everything_enabled.json
@@ -5,17 +5,38 @@
       "event_params",
       "user_properties",
       "items"
-    ]
-  },
-  "output_format": {
-    "sharded": true,
-    "partitioned": true
-  },
-  "intraday_flattening": {
-    "intraday_flat_tables_schedule": {
-      "frequency": 1,
-      "units": "hours"
+    ],
+    "output_format": {
+      "sharded": true,
+      "partitioned": true
     },
-    "intraday_flat_views": true
+    "intraday_flattening": {
+      "intraday_flat_tables_schedule": {
+        "frequency": 1,
+        "units": "hours"
+      },
+      "intraday_flat_views": true
+    }
+  },
+
+  "analytics_123456789": {
+    "tables_to_flatten": [
+      "events",
+      "event_params",
+      "user_properties",
+      "items"
+    ],
+    "output_format": {
+      "sharded": true,
+      "partitioned": true
+    },
+    "intraday_flattening": {
+      "intraday_flat_tables_schedule": {
+        "frequency": 1,
+        "units": "hours"
+      },
+      "intraday_flat_views": true
+    }
   }
+
 }
