--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ env:
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, development, staging ]
   pull_request:
     branches: [ master ]
 
