--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,7 +6,7 @@ name: Python package
 env:
   GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-  DEPLOYMENT_NAME: "ga-flattener-deployment"
+  DEPLOYMENT_NAME: "ga4-flattener-deployment"
 
 on:
   push:
@@ -57,7 +57,7 @@ jobs:
           # remove GCS config file
           # if we cannot delete, continue with the script
           # https://stackoverflow.com/questions/22009364/is-there-a-try-catch-command-in-bash
-          gsutil rm gs://ga-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: cannot delete GCS config file"
+          gsutil rm gs://ga4-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: cannot delete GCS config file"
 
           gcloud deployment-manager deployments list
           gcloud deployment-manager deployments delete "$DEPLOYMENT_NAME" -q || echo "ERROR: cannot delete deployment"
@@ -66,7 +66,7 @@ jobs:
           gcloud deployment-manager deployments create "$DEPLOYMENT_NAME" --config ga_flattener.yaml
           
           # check for the config file
-          gsutil stat gs://ga-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: GCS config file not found"
+          gsutil stat gs://ga4-flattener-deployment-464892960897-adswerve-ga-flat-config/config_datasets.json || echo "ERROR: GCS config file not found"
 
       - name: Test with pytest
         run: |
