--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,9 +10,9 @@ env:
 
 on:
   push:
-    branches: [ master, staging ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, staging ]
+    branches: [ master ]
 
 jobs:
   build:
