--- a/cf/requirements.txt
+++ b/cf/requirements.txt
@@ -1,6 +1,6 @@
-google-api-python-client==1.12.8
-google-cloud-storage==1.35.0
-google-cloud-bigquery==2.7.0
-google-cloud-pubsub==2.2.0
-google-cloud-bigquery-storage==2.10.1
+google-api-python-client~=1.12.8
+google-cloud-storage~=1.35.0
+google-cloud-bigquery~=3.13.0
+google-cloud-pubsub~=2.2.0
+google-cloud-bigquery-storage~=2.10.1
 pytz~=2022.7.1
