--- a/cfconfigbuilder/requirements.txt
+++ b/cfconfigbuilder/requirements.txt
@@ -1,3 +1,3 @@
-google-api-python-client==1.12.8
-google-cloud-storage==1.35.0
-google-cloud-bigquery==2.7.0
+google-api-python-client~=1.12.8
+google-cloud-storage~=1.35.0
+google-cloud-bigquery~=3.13.0
