--- a/cfconfigbuilderps/requirements.txt
+++ b/cfconfigbuilderps/requirements.txt
@@ -1,4 +1,4 @@
-google-api-python-client==1.12.8
-google-cloud-storage==1.35.0
-google-cloud-bigquery==2.7.0
-google-cloud-pubsub==2.2.0
+google-api-python-client~=1.12.8
+google-cloud-storage~=1.35.0
+google-cloud-bigquery~=3.13.0
+google-cloud-pubsub~=2.2.0
