--- a/cfintraday/requirements.txt
+++ b/cfintraday/requirements.txt
@@ -1,6 +1,6 @@
-google-cloud-storage==1.42.0
-google-cloud-scheduler==2.3.2
-google-api-python-client==2.17.0
-grpcio==1.39.0
-google-cloud-logging==2.6.0
-pyparsing==2.4.7
+google-cloud-storage~=1.42.0
+google-cloud-scheduler~=2.3.2
+google-api-python-client~=2.17.0
+grpcio~=1.59.2
+google-cloud-logging~=2.6.0
+pyparsing~=2.4.7
