--- a/tests/requirements-test.txt
+++ b/tests/requirements-test.txt
@@ -1,5 +1,5 @@
-pytest==6.2.1
-testfixtures==6.18.0
+pytest~=6.2.1
+testfixtures~=6.18.0
 pytz~=2022.5
-pandas==1.3.5
-pyarrow==6.0.1
+pandas~=2.1.2
+pyarrow~=13.0.0
