--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,6 +33,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade setuptools
+          
+          python -m pip install flake8 pytest
+          
           pip install -r cf/requirements.txt
           pip install -r cfintraday/requirements.txt
           pip install -r cfintradaysqlview/requirements.txt
