Revert "build: CI/CD"
This reverts commit 8eeb43a03d4f2634a45778c5eafed20b95df3b6c.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,9 +10,9 @@ env:
 
 on:
   push:
-    branches: [ staging ]
+    branches: [ master, development ]
   pull_request:
-    branches: [ staging ]
+    branches: [ master ]
 
 jobs:
   build:
